[package]
name = "nutek-cipher-lib"
version = "0.1.0"
edition = "2021"
categories = ["crypto", "encryption"]
description = "Encrypt and decrypt data using AES-GCM-SIV."
license-file = "LICENSE"
repository = "https://github.com/nutek-terminal/nutek-cipher-lib"
authors = ["Szymon Błaszczyński <museyoucoulduse@gmail.com>"]
readme = "README.md"
keywords = ["crypto", "encryption"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"